# libfunction

./: .clang-format  .gitignore  CMakeLists.txt
libfunction/: CMakeLists.txt  function.h
test/: CMakeLists.txt  prepare_google_test.cml  test_main.cc
test/testfunction/: CMakeLists.txt  testfunction.cc  testfunction.h
